  temporarily turn game recording back on.

--Fixed so that after AHAP content-only update (which happens before loading),
  we don't re-launch the client, but instead go right into loading the newly-
  downloaded content.

--No more auto-relaunch on Windows, since it doesn't always work correctly.
  To be safe, let user manually relaunch on Windows.





Server Fixes:

--Changed curse radius formula to start much smaller when there are only a few
  living people cursing you, but then go up on a parabolic curve from there.
  Old formula started larger and then went up linearly.  The old formula
  allowed one mega-curser to effectively block lots of players from being born
  in a given town.  Fixes #1034

--Re-directing stderr when launching headless server, which prevents
  invocations over ssh by scripts from stalling.

--AHAP versions of status report and update posts scripts.

--Scripts in place for generating AHAP content diff bundles.

--Script for Live_UnixSource distribution for AHAP.

--Remote server update scripts now --force when pulling tags, to overwrite
  tags if tags have changed remotely.

--Added updateGate web service to allow content leader to push updates.

--Scheduled data update scripts now make home path explicit instead of using ~




Version 412   2024-February-16

--Support for AHAP differentiation with a text file in the game folder.  AHAP
  clients skip universal _all.dbz content diff bundles.

--AHAP clients now check online ahapVersion.txt and download content update
  diff bundles from a separate AHAP update server.  They also use a separate
  AHAP reflector when connecting.  Client and server, if isAHAP.txt is set to
  1, track binary version number separate from data version number.
  AutoUpdatePage messaging is different for AHAP clients when downloading diff
  bundles.

--Importer, when adding new objects (instead of replacing old), prints out
  object ID remapping.
